feat: concert-service REST API 복원